# triangle

./: CMakeLists.txt  main.cpp  tests.cpp  triangle.cpp  triangle.h
